--- a/Contact.html
+++ b/Contact.html
@@ -10,24 +10,24 @@
   height: 5px;
   padding:15px 15px 30px 10px;
 } 
-<button style="text-align: center;"click here for more
-</button>
+<button style="text-align: center;"click here for more</button>
     <centre>      
         </style>
         <title> Ramya's Website</title>
-        <link rel="stylesheet" href="Contactstyles.css">;
+        <link rel="stylesheet" href="Contactstyles.css">
     </head>
     <body>
         <header> 
             <nav>
                 <ul>
-                    <li><a href= "ramya.html">Home</a></li>
-                    <li><a href="About Me.html">About us</a></li>
-                    <li><a href="Contact.html">Contact</a></li>   
+                    <li><a href="ramya.html">Home</a></li>
+                    <li><a href="About me.html">About me</a></li>
+                    <li><a href="Contact.html">Contact</a></li>              
+                    
                 </ul>
                 <p style="font-size:50px;">Contact</p></nav> </header>
-    <section>
-            You can call me at  8754037170 </section>
+        <section> Mail to: sramya.se@gmail.com.
+            </section>
         <footer>Motivation for the day. Never Settle.
              Manipualte your resources at the right way to <em>acheive beyond your levels.</em></footer>
         <p><button><centre>Click here for more</centre></button></p>
